# kusyn

./: .gitignore  README.md  pyproject.toml
src/kusyn/: __init__.py  kusyn.py
tests/kusyn/: test_kusyn.py
tests/kusyn/test_data/: Dockerfile  kusyn_test_config.conf  kusyn_test_config_no_dockerfile.conf  test.tar  test_file_to_folder
tests/kusyn/test_data/test_root/: another_kusyn.conf  test_DockerFile
